--- a/lab06/crossley-bio.html
+++ b/lab06/crossley-bio.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Stephen Crossley's Biography</h1> 
+     
+     <p>
+        <img src="images/military-bio-photo.png" alt="My Photoshop Image">
+    </p>
 
     <h2>Personal Info</h2>
     <p>
